--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,56 @@
-* {
-padding: 0px;
-margin: 64px 199px 240px 199px;
-box-sizing: border-box;
+body {
+  text-align: center;
+  margin-top: 64px;
 }
 
 #main {
   width: 626px;
-  height: 488px;
-  padding: 0px 72px 64px;
-  
+  height: 486px;
+  padding: 0px 72px 32px 72px;
   margin: auto;
-  border: 1px solid red;
+  
+  
 }
 
 img {
   width: 350px;
   height: 238px;
   margin: auto;
+}
+
+#destino {
+  color: #EE24FF;
+}
+#pacotes {
+  color: #3F3D56;
+}
+#preços {
+  color: #3F3D56;
+}
+
+h1 span{
+  width: 334px;
+  height: 265px;
+  font-family: sans-serif;
+  font-size: 25px;
+  font-weight: medium;
+  color: #3F3D56;
+  margin-bottom: 16px;
+}
+p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  color: #828282;
+  padding: 0px 36px 32px 50px;
+}
+.rodapé {
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  color: #828282;
   
-  display: block;
+}
+#destinosrodape {
+  color: #3F3D56;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
 }
